[gd_scene load_steps=2 format=3 uid="uid://stb4ad3iost2"]

[ext_resource type="Script" path="res://addons/diisis/editor/src/text_search_container.gd" id="1_m62qa"]

[node name="TextSearchContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m62qa")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="QueryTextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3

[node name="SearchButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Search"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ItemList" type="ItemList" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
auto_height = true

[node name="ResultLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/SearchButton" to="." method="_on_search_button_pressed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer2/ItemList" to="." method="_on_item_list_item_selected"]
